<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/pink"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/title_back_imageButton"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/mm_title_back_iv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/title_back_imageButton"
            android:gravity="center"
            android:text="@string/fragment_auth_textView_tellUs"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/whiteSmoke" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/aboutActivity_textView_appName" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lightgray" />

    <RelativeLayout
        android:id="@+id/activity_about_rl_appVersionName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="当前版本"
            android:textColor="@color/darkgray" />

        <TextView
            android:id="@+id/activity_about_tv_appVersionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            
            android:textColor="@color/darkgray" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"      
        android:background="@color/lightgray" />

    <RelativeLayout
        android:id="@+id/activity_about_rl_telePhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/tv_connectMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:text="客服电话"
                android:textColor="@color/darkgray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_connectMe"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/aboutActivity_textView_serviceHours"
                android:textColor="@color/lightgray"
                android:textSize="12sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/activity_about_tv_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/aboutActivity_textView_phoneNumber"
            android:textColor="@color/darkgray" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lightgray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteSmoke"
        android:gravity="bottom|center"
        android:paddingBottom="20dp"
        android:text="@string/aboutActivity_textView_companyName"
        android:textColor="@color/darkgray" />

</LinearLayout>